[package]
name = "poc-framework"
version = "0.1.5"
authors = []
edition = "2018"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["solana", "smart", "contracts"]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.1"
bincode = "1.3.3"
rand = "0.7.3"
tempfile = "3.2.0"
borsh = "0.9.1"
solana-sdk = "*"
solana-program = "*"
solana-logger = "*"
solana-runtime = "*"
solana-transaction-status = "*"
solana-cli-output = "*"
solana-bpf-loader-program = "*"
solana-ed25519-program = "*"
solana-compute-budget-program = "*"
solana-vote-program = "*"
solana-stake-program = "*"
solana-config-program = "*"
solana-secp256k1-program = "*"
solana-client = "*"
solana-faucet = "*"
spl-token = "*"
spl-memo = "*"
spl-associated-token-account = "*"
serde = "1.0.125"
sha2 = "0.10.2"
libsecp256k1 = "0.7.0"
sha3 = "0.10.0"
hex = "0.4.3"
once_cell = "1.9.0"
